--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # File that list contributors to the simple shell project.
 Michael Olaniyan <michaelolanny@gmail.com>
-
+Akuna Joshua <akunajoshua@gmail.com>
